Multiple separators in sequence are ignored in pie menus causing layout misalignments #63912

Closed
opened 2019-04-26 15:40:01 +02:00 by MACHIN3 · 9 comments

System Information
Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67

Blender Version
Broken: b89cabb300
Worked: d966c2f0c2

Short description of error
b89cabb300 seems to hide separators, if there are multiple in sequence. I'd argue that for pie menus at least, using multiple separators in sequence is a useful layout technique.

{F6979354}expected behavior above, current behavior below

Exact steps for others to reproduce the error

  • open the attached blend in b89cabb300 or newer
    • run thr script, notice how the second pie.separator() is ignored, causing the misalignment
  • open the attached blend in an earlier build
    • everything works as expected

pie_separator.blend

**System Information** Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67 **Blender Version** Broken: `b89cabb300` Worked: `d966c2f0c2` **Short description of error** `b89cabb300` seems to hide separators, if there are multiple in sequence. I'd argue that for pie menus at least, using multiple separators in sequence is a useful layout technique. {[F6979354](https://archive.blender.org/developer/F6979354/pie_separator.jpg)}*expected behavior above, current behavior below* **Exact steps for others to reproduce the error** * open the attached blend in `b89cabb300` or newer * run thr script, notice how the second pie.separator() is ignored, causing the misalignment * open the attached blend in an earlier build * everything works as expected [pie_separator.blend](https://archive.blender.org/developer/F6979365/pie_separator.blend)
Author

Added subscriber: @MACHIN3

Added subscriber: @MACHIN3
Harley Acheson was assigned by MACHIN3 2019-04-26 15:42:29 +02:00

Added subscriber: @Pinnhead

Added subscriber: @Pinnhead

I have the same issue with blender-2.80-513b71c89ad0-win64 build.

I have the same issue with blender-2.80-513b71c89ad0-win64 build.
Member

Yes, looks like I definitely broke that on that patch .

Will fix this today for sure.

Yes, looks like I definitely broke that on that [patch ](https://developer.blender.org/rBb89cabb300816427273596736aa45ab9edca76b9). Will fix this today for sure.
Member

There is a patch to fix this here .

Sorry for the inconvenience. I did not intend to mangle pie menus while cleaning up a mess with regular menus.

There is a patch to fix this [here ](https://developer.blender.org/D4748). Sorry for the inconvenience. I did not intend to mangle pie menus while cleaning up a mess with regular menus.

Still no patch in todays build (blender-2.80-a57fec986d2d-win64)

Still no patch in todays build (blender-2.80-a57fec986d2d-win64)

This issue was referenced by 395fa5eb4c

This issue was referenced by 395fa5eb4c1c52d4ea133f7ac2b96dbd6beb7c18
Member

Added subscriber: @BrendonMurphy

Added subscriber: @BrendonMurphy

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63912
No description provided.