Fix T63912: don't collapse menu separators for pie menus

Differential Revision: https://developer.blender.org/D4748